# Networking_videostreaming_imageprocessing

./: .gitignore  CMakeLists.txt
cpp_client_server_tutorial/: CMakeLists.txt  README.md  net_util.cpp  ser.r.cpp  ser_c.cpp  server.cpp
cpp_client_server_tutorial/include/: net_util.hpp
cpp_client_server_tutorial/src/: client.cpp  net_util.cpp  server.cpp
cuda_matmul/: CMakeLists.txt  README.md  adds.cu  hello.cu  matadd_10k.cu  prime.cu  sim_add.cu  sim_add_cpu.cpp
cuda_matmul/matrix_mul/: CMakeLists.txt  README.md  intensity_lab.cpp  tensor_core_align.cpp  tiling_sim.cpp  wave_quant.cpp
cuda_matmul/mini_lab/: README.md  mini_matmul.cu
cuda_matmul/src/: main.cu
day 4/: Day 4 Journal.md  README.md  distributed_challenge.py  matmul_lab.py
day1/: README.md  checklist_day1.md  concept_overview.md  flashcards_day1.md  gray_video.cpp  reflection.md  reflection_day1.md  simple.cpp
day1/docs/: architecture_day1.drawio
day2/: README.md  anki_day2.txt  architecture_day2_template.puml  reflection_day2.md  simple_thread.cpp  thread_concepts_template.md  thread_step_01_spawn.cpp  thread_step_02_thread_guard.cpp  thread_step_03_data_race.cpp  thread_step_04_mutex_fix.cpp  thread_step_05_condition_variable.cpp  thread_step_06_ring_buffer_skeleton.cpp  threaded_stream_exercise.cpp  threaded_stream_solution.cpp  threadstream.cpp
day3/: README.md  checklist_day3.md  flashcards_day3.md  latency_experiment_log.md  reflection_day3_template.md
day3/templates/: netem_playbook.md  rtt_plot.py  tcp_echo_server.cpp  tcp_latency_client.cpp  (+1 more)
day5/: 1_condition_variable_basics.cpp  2_safe_queue_demo.cpp  3_thread_pool_stub.cpp  CMakeLists.txt  README.md  normal_matadd.cpp  pkg_s.cpp  th_add.cpp  thread_promise.cpp  timing_matrix_ops.cpp  timing_matrix_ops.hpp
day5/tree_structures/: README.md  avl_task.md  avltree.cpp  red_black_task.md
day6/: Matrixc.h  README.md  client.cpp  clientclass.cpp  clientclass.h  future.cpp  journal.md  matrixclass.cpp  measurements.md  server.cpp  serverclass.cpp  serverclass.h  simpl.cpp  simpl_threadPool.cpp  th_client.cpp  threadpool_client_server.cpp
study_threads/: async_policies.cpp  atomic_lab.cpp  future_minimal.cpp  future_walkthrough.cpp  problem_template.md  promise_signal.cpp  reflection.md  study_plan.md
